Comp213 Final_Project #2

--- a/Semester_1/Web_Interface_Design/Final_Project/login.html
+++ b/Semester_1/Web_Interface_Design/Final_Project/login.html
@@ -12,27 +12,28 @@
             <div id="login-div1">
                 <div id="login-divTop">
                     <a href="">
-                        <img src="banner.png">
+                        <img src="./Imgs/login-pic.png">
                     </a>
                     <h4>Log in to WHC</h4>
                 </div>
                 <div id="login-divMid">
                     <div class="login-inputWrapper">
-                        <img src="banner.png">
+                        <img src="./Imgs/login-email.png">
                         <input type="text" placeholder="Email">
                     </div>
                     <div class="login-inputWrapper">
-                        <img src="banner.png">
-                        <input type="text" placeholder="Password">
+                        <img src="./Imgs/login-password.png">
+                        <input type="password" placeholder="Password">
                     </div>
                     <div id="login-div2">
-                        <label><input type="radio" name="group1"> Remember me</label>
+                        <label><input type="checkbox"> Remember me</label>
                         <a href="">Forgot Password?</a>
                     </div>
                     <input type="submit" id="login-bttn" value="Log In">
                 </div>
                 <div id="login-divBot">
-                    <a href="">Register</a>
+                    <label>New to WHC?</label>
+                    <a href="">Sign up</a>
                 </div>
             </div>
         </div>
