Comp213 Final_Project #3

--- a/Semester_1/Web_Interface_Design/Final_Project/registration.html
+++ b/Semester_1/Web_Interface_Design/Final_Project/registration.html
@@ -30,69 +30,69 @@
                     </div>
                     <div class="regis-div2">
                         <div class="regis-inputWrapper">
-                            <img src="./Imgs/user-icon.png">
+                            <img src="./Imgs/">
                             <input type="text" placeholder="Email Address">
                         </div>
                         <div class="regis-inputWrapper">
-                            <img src="./Imgs/user-icon.png">
+                            <img src="./Imgs/phone-icon.png">
                             <input type="text" placeholder="Phone Number">
                         </div>
                     </div>
                     <h4>Billing Address</h4>
                     <div class="regis-div3">
                         <div class="regis-inputWrapper">
-                            <img src="./Imgs/user-icon.png">
+                            <img src="./Imgs/company-icon.png">
                             <input type="text" placeholder="Company Name (Optional)">
                         </div>
                     </div>
                     <div class="regis-div3">
                         <div class="regis-inputWrapper">
-                            <img src="./Imgs/user-icon.png">
+                            <img src="./Imgs/address-icon.png">
                             <input type="text" placeholder="Street Address">
                         </div>
                     </div>
                     <div class="regis-div3">
                         <div class="regis-inputWrapper">
-                            <img src="./Imgs/user-icon.png">
+                            <img src="./Imgs/address-icon.png">
                             <input type="text" placeholder="Street Address 2">
                         </div>
                     </div>
                     <div class="regis-div2">
                         <div class="regis-inputWrapper">
-                            <img src="./Imgs/user-icon.png">
+                            <img src="./Imgs/city-icon.png">
                             <input type="text" placeholder="City">
                         </div>
                         <div class="regis-inputWrapper">
-                            <img src="./Imgs/user-icon.png">
+                            <img src="./Imgs/postcode-icon.png">
                             <input type="text" placeholder="Postcode">
                         </div>
                     </div>
                     <div class="regis-div3">
                         <div class="regis-inputWrapper">
-                            <img src="./Imgs/user-icon.png">
+                            <img src="./Imgs/country-icon.png">
                             <input type="text" placeholder="Country">
                         </div>
                     </div>
                     <div class="regis-div3">
                         <div class="regis-inputWrapper">
-                            <img src="./Imgs/user-icon.png">
+                            <img src="./Imgs/company-icon.png">
                             <input type="text" placeholder="Tax ID (Optional)">
                         </div>
                     </div>
                     <h4>Account Security</h4>
                     <div class="regis-div2">
                         <div class="regis-inputWrapper">
-                            <img src="./Imgs/user-icon.png">
+                            <img src="./Imgs/password-icon.png">
                             <input type="password" placeholder="Password">
                         </div>
                         <div class="regis-inputWrapper">
-                            <img src="./Imgs/user-icon.png">
+                            <img src="./Imgs/password-icon.png">
                             <input type="password" placeholder="Confirm Password">
                         </div>
                     </div>
                     <div id="regis-div4">
                         <div id="regis-div5">
-                            <img src="./Imgs/logo-pic.png">
+                            <img src="./Imgs/warning-icon.png">
                             <h5>Terms of Service</h5>
                         </div>
                         <label><input type="checkbox"> By submitting this order, you agree to the <a href="">Terms of Service</a> and <a href="">Privacy Policy</a>. You agree that WHC will automatically attempt to renew your services prior to their next due date unless you request otherwise from your Client Area.</label>
