Comp213 Final_Project #4

--- a/Semester_1/Web_Interface_Design/Final_Project/home.html
+++ b/Semester_1/Web_Interface_Design/Final_Project/home.html
@@ -6,79 +6,54 @@
         <title></title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
-        <header class="headerOne">
-            <nav>
-                <ul>
-                    <li><a href="">Français</a></li>
-                    <li>|</li>
-                    <li><a href="">Help</a></li>
-                    <li><a href="">Blog</a></li>
-                    <li><a href="">Contact</a></li>
-                    <li><a href="">Register</a></li>
-                    <li><a href="">Log in</a></li>
-                </ul>
-            </nav>
-        </header>
-        <header class="headerTwo">
-            <div class="headerTwo_divOne">
-                <a href="">
-                    <img src="banner.png">
-                </a>
-            </div>
-            <nav>
-                <ul>
-                    <li><a href="">Hosting & Servers</a></li>
-                    <li><a href="">Domains</a></li>
-                    <li><a href="">Websites & Email</a></li>
-                    <li><a href="">Marketing & SEO</a></li>
-                    <li><a href="">Security & SSL</a></li>
-                </ul>
-            </nav>
-        </header>
-        <section id="pre-footer">
-            <div class="container">
-                <div class="row">
-                    <div class="col">
-                        <ul>
-                            <li>Hosting & Servers</li>
-                            <li><a href="">Canadian Web Hosting</a></li>
-                            <li><a href="">Canadian Cloud Servers</a></li>
-                        </ul>
-                    </div>
+        <div id="home-main">
+            <div id="home-search">
+                <div id="home-search-inputWrapper">
+                    <input type="text" id="home-search-bar" placeholder="Find your perfect domain">
+                    <input type="submit" id="home-search-bttn" value="Search">
                 </div>
-                <div class="row">
-                    <div class="col2">
-                        <a href=""><img src="banner.png"></a>
-                        <a href=""><img src="banner.png"></a>
-                        <a href=""><img src="banner.png"></a>
-                        <a href=""><img src="banner.png"></a>
-                        <div class="pull-right float-right">
-                            <div class="footer-infos">
-                                1-514-504-2113
-                            </div>
-                            <div class="footer-infos">
-                                7250 Clark Street #301, Montreal, Quebec H2R 2Y3 Canada
-                            </div>
-                        </div>
-                    </div>
+                <div class="home-search-div">
+                    <img src="./Imgs/logo-pic.png">
+                    <label>C$9.99</label>
+                </div>
+                <div class="home-search-div">
+                    <img src="./Imgs/logo-pic.png">
+                    <label>C$9.99</label>
+                </div>
+                <div class="home-search-div">
+                    <img src="./Imgs/logo-pic.png">
+                    <label>C$9.99</label>
                 </div>
             </div>
-        </section>
-        <div id="footer" class="container-fluid">
-            <div class="container">
-                <div class="row">
-                    <div class="col text-center">
-                        @ 2024 Web Hosting Canada
-                        <a href="">
-                            <img src="banner.png" id="greenHostingBadge">
-                        </a>
-                        <ul>
-                            <li><a href="">Legal</a></li>
-                            <li><a href="">Privacy Policy</a></li>
-                        </ul>
-                    </div>
+            <div id="home-hero">
+            </div>
+            <div id="home-content">
+                <div class="home-content-div">
+                    <i class="fa fa-server" id="home-content-div-icon"></i>
+                    <h4 class="home-content-div-h4">Web Hosting</h4>
+                    <p class="home-content-div-p">Get fast and unlimited web hosting for your site</p>
+                    <input type="submit" class="home-content-bttn" value="Get Hosting">
+                </div>
+                <div class="home-content-div">
+                    <i class="fa fa-cloud-upload" id="home-content-div-icon"></i>
+                    <h4 class="home-content-div-h4">Cloud Servers</h4>
+                    <p class="home-content-div-p">Take full control with our fastest virtual servers</p>
+                    <input type="submit" class="home-content-bttn" value="Get Hosting">
+                </div>
+                <div class="home-content-div">
+                    <i class="fa fa-hdd-o" id="home-content-div-icon"></i>
+                    <h4 class="home-content-div-h4">Dedicated Servers</h4>
+                    <p class="home-content-div-p">Boost your business with dedicated hardware</p>
+                    <input type="submit" class="home-content-bttn" value="Get Hosting">
+                </div>
+                <div class="home-content-div">
+                    <i class="fa fa-wordpress" id="home-content-div-icon"></i>
+                    <h4 class="home-content-div-h4">WordPress</h4>
+                    <p class="home-content-div-p">Manage your WordPress websites easily</p>
+                    <input type="submit" class="home-content-bttn" value="Get WordPress">
                 </div>
             </div>
         </div>
