--- a/Semester_1/Web_Interface_Design/Final_Project/login.html
+++ b/Semester_1/Web_Interface_Design/Final_Project/login.html
@@ -6,23 +6,24 @@
         <title></title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
         <div id="login-main">
             <div id="login-div1">
                 <div id="login-divTop">
                     <a href="">
-                        <img src="./Imgs/login-pic.png">
+                        <img src="./Imgs/logo-pic.png">
                     </a>
                     <h4>Log in to WHC</h4>
                 </div>
                 <div id="login-divMid">
                     <div class="login-inputWrapper">
-                        <img src="./Imgs/login-email.png">
+                        <i class="fa fa-user" id="login-input-icon"></i>
                         <input type="text" placeholder="Email">
                     </div>
                     <div class="login-inputWrapper">
-                        <img src="./Imgs/login-password.png">
+                        <i class="fa fa-lock" id="login-input-icon"></i>
                         <input type="password" placeholder="Password">
                     </div>
                     <div id="login-div2">
