--- a/Semester_1/Web_Interface_Design/Final_Project/registration.html
+++ b/Semester_1/Web_Interface_Design/Final_Project/registration.html
@@ -6,6 +6,7 @@
         <title></title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
         <div id="regis-main">
@@ -20,79 +21,80 @@
                     <h4>Personal Information</h4>
                     <div class="regis-div2">
                         <div class="regis-inputWrapper">
-                            <img src="./Imgs/user-icon.png">
+                            <i class="fa fa-user" id="regis-input-icon"></i>
+                            <!-- <img src="./Imgs/user-icon.png"> -->
                             <input type="text" placeholder="First Name">
                         </div>
                         <div class="regis-inputWrapper">
-                            <img src="./Imgs/user-icon.png">
+                            <i class="fa fa-user" id="regis-input-icon"></i>
                             <input type="text" placeholder="Last Name">
                         </div>
                     </div>
                     <div class="regis-div2">
                         <div class="regis-inputWrapper">
-                            <img src="./Imgs/">
+                            <i class="fa fa-envelope" id="regis-input-icon2"></i>
                             <input type="text" placeholder="Email Address">
                         </div>
                         <div class="regis-inputWrapper">
-                            <img src="./Imgs/phone-icon.png">
+                            <i class="fa fa-phone" id="regis-input-icon"></i>
                             <input type="text" placeholder="Phone Number">
                         </div>
                     </div>
                     <h4>Billing Address</h4>
                     <div class="regis-div3">
                         <div class="regis-inputWrapper">
-                            <img src="./Imgs/company-icon.png">
+                            <i class="fa fa-building" id="regis-input-icon3"></i>
                             <input type="text" placeholder="Company Name (Optional)">
                         </div>
                     </div>
                     <div class="regis-div3">
                         <div class="regis-inputWrapper">
-                            <img src="./Imgs/address-icon.png">
+                            <i class="fa fa-map-marker" id="regis-input-icon4"></i>
                             <input type="text" placeholder="Street Address">
                         </div>
                     </div>
                     <div class="regis-div3">
                         <div class="regis-inputWrapper">
-                            <img src="./Imgs/address-icon.png">
+                            <i class="fa fa-map-marker" id="regis-input-icon4"></i>
                             <input type="text" placeholder="Street Address 2">
                         </div>
                     </div>
                     <div class="regis-div2">
                         <div class="regis-inputWrapper">
-                            <img src="./Imgs/city-icon.png">
+                            <i class="fa fa-building-o" id="regis-input-icon3"></i>
                             <input type="text" placeholder="City">
                         </div>
                         <div class="regis-inputWrapper">
-                            <img src="./Imgs/postcode-icon.png">
+                            <i class="fa fa-certificate" id="regis-input-icon3"></i>
                             <input type="text" placeholder="Postcode">
                         </div>
                     </div>
                     <div class="regis-div3">
                         <div class="regis-inputWrapper">
-                            <img src="./Imgs/country-icon.png">
+                            <i class="fa fa-globe" id="regis-input-icon4"></i>
                             <input type="text" placeholder="Country">
                         </div>
                     </div>
                     <div class="regis-div3">
                         <div class="regis-inputWrapper">
-                            <img src="./Imgs/company-icon.png">
+                            <i class="fa fa-building" id="regis-input-icon3"></i>
                             <input type="text" placeholder="Tax ID (Optional)">
                         </div>
                     </div>
                     <h4>Account Security</h4>
                     <div class="regis-div2">
                         <div class="regis-inputWrapper">
-                            <img src="./Imgs/password-icon.png">
+                            <i class="fa fa-lock" id="regis-input-icon2"></i>
                             <input type="password" placeholder="Password">
                         </div>
                         <div class="regis-inputWrapper">
-                            <img src="./Imgs/password-icon.png">
+                            <i class="fa fa-lock" id="regis-input-icon2"></i>
                             <input type="password" placeholder="Confirm Password">
                         </div>
                     </div>
                     <div id="regis-div4">
                         <div id="regis-div5">
-                            <img src="./Imgs/warning-icon.png">
+                            <i class="fa fa-exclamation-triangle" id="regis-input-icon5"></i>
                             <h5>Terms of Service</h5>
                         </div>
                         <label><input type="checkbox"> By submitting this order, you agree to the <a href="">Terms of Service</a> and <a href="">Privacy Policy</a>. You agree that WHC will automatically attempt to renew your services prior to their next due date unless you request otherwise from your Client Area.</label>
